# timetableManager

./: .gitignore  Antonio_horario.txt  Aula.h  CMakeLists.txt  Estudante.cpp  Estudante.h  GestaoHor.cpp  GestaoHor.h  Ludovico_horario.txt  Manuel_horario.txt  Menu.cpp  Menu.h  MenuEstudantes.cpp  MenuEstudantes.h  MenuHorario.cpp  MenuHorario.h  MenuOcupacao.cpp  MenuOcupacao.h  Pedido.cpp  Pedido.h  UCTurma.cpp  UCTurma.h  dconfig  dconfig.bak  main.cpp
CLionProjects/networkManager/: CMakeLists.txt  Menu.cpp  MenuGlobalStats.cpp  MenuGlobalStats.h
codigo/: Aula.cpp  Aula.h  Estudante.h  GestaoHor.cpp  GestaoHor.h  Menu.cpp  Menu.h  MenuEstudantes.cpp  MenuEstudantes.h  MenuHorario.cpp  MenuHorario.h  MenuOcupacao.cpp  Pedido.h  UCTurma.cpp  UCTurma.h
documentacao/: dconfig
html/: _aula_8cpp.html  _aula_8cpp_source.html  _aula_8h.html  _aula_8h_source.html  _estudante_8cpp.html  _estudante_8cpp_source.html  _estudante_8h.html  _estudante_8h_source.html  _gestao_hor_8cpp.html  _gestao_hor_8cpp_source.html  _gestao_hor_8h.html  _gestao_hor_8h_source.html  _menu_8cpp.html  _menu_8cpp_source.html  _menu_8h.html  _menu_8h_source.html  _menu_estudantes_8h_source.html  _menu_horario_8h_source.html  _menu_ocupacao_8h_source.html  _pedido_8cpp.html  _pedido_8cpp_source.html  _pedido_8h.html  _pedido_8h_source.html  _r_e_a_d_m_e_8md.html  _u_c_turma_8cpp.html  _u_c_turma_8cpp_source.html  _u_c_turma_8h.html  _u_c_turma_8h_source.html  addon_2doxmlparser_2_r_e_a_d_m_e_8md.html  addon_2doxmlparser_2doxmlparser_2____init_____8py.html  (+4969 more)
latex/: _aula_8cpp.tex  _aula_8h.tex  (+4143 more)
(+336 files in other folders)
